change default keyboard shortcut
to avoid conflict with chrome's default

--- a/manifest.json
+++ b/manifest.json
@@ -16,11 +16,10 @@
   ],
   "commands": {
     "goto-google-tab": {
+      "description": "jump to an opened google tab and start search",
       "suggested_key": {
-        "default": "Ctrl+G",
-        "mac": "Command+G"
-      },
-      "description": "jump to an opened google tab and start search"
+        "default": "Ctrl+I"
+      }
     }
   }
 }
