add new background script for tab sorting

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,10 @@
   "browser_action": {
   },
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "backgroundGoogleTab.js",
+      "backgroundTabSort.js"
+    ],
     "persistent": false
   },
   "content_scripts": [
