use key shortcut to sort tabs

--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,12 @@
       "suggested_key": {
         "default": "Ctrl+I"
       }
+    },
+    "sort-tabs": {
+      "description": "sort all open tabs",
+      "suggested_key": {
+        "default": "Ctrl+U"
+      }
     }
   }
 }
